2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-control.[ch]: Use GObject, not GtkObject.
	* bonobo/bonobo-control-frame.[ch]: Likewise.
	* bonobo/bonobo-ui-component.[ch]: Likewise.
	* bonobo/bonobo-ui-container.[ch]: Likewise.

	* bonobo/bonobo-ui-engine.c (impl_destroy): Removed and put
	all the stuff into finalize; `destroy' may be run multiple
	times with GTK+ 2.0, so it's easier to have this in finalize.

	* bonobo/bonobo-widget.c (bonobo_widget_destroy): Renamed to
	bonobo_widget_finalize(), we use `finalize' since `destroy'
	may be run multiple times.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/Makefile.am: Install all our header files.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* libbonoboui.h: Don't #include bonobo-print.h and
	bonobo-print-client.h for the moment.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-win.c (construct_priv): #ifdef FIXME call
	to gtk_menu_bar_set_shadow_type().

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-selector-widget.c: #include
	<libgnome/gnome-preferences.h> instead of
	<libgnomeui/gnome-uidefs.h>.
	* bonobo/bonobo-ui-sync-static.c: Likewise.

	* bonobo/bonobo-ui-sync-menu.c: #include
	<libgnome/gnome-preferences.h> instead of
	<libgnomeui/gnome-preferences.h>.
	* bonobo/bonobo-ui-sync-toolbar.c: Likewise.
	* bonobo/bonobo-win.c: Likewise.

	* bonobo/bonobo-ui-sync-menu.h: #include <gtk/gtkmenubar.h>.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-main.[ch]: New files.
	(bonobo_ui_init, bonobo_ui_init_full): New functions to
	initialize libbonoboui.
	(bonobo_setup_x_error_handler): Moved here from libbonobo.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* tests/*.c: Make the tests actually work.

	* Makefile.am (SUBDIRS): Added tests/.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/libbonoboui-2.0.pc.in: Make this actually work.

2001-04-25  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-dock.[ch], bonobo/bonobo-dock-item.[ch],